# swagger/swagger.yml
@@ -483,6 +483,70 @@ paths:
           description: no table
       tags:
       - generic
+  /generic/{table}/count:
+    get:
+      description: |-
+        Count Datas
+        <br>
+      operationId: GenericController.Count
+      parameters:
+      - description: Value of the table
+        in: path
+        name: table
+        required: true
+        type: string
+      - description: needed on a rows level request (value=all for post/put method
+          or a get/delete all)
+        in: query
+        name: rows
+        type: string
+      - description: needed on a columns level request (POST/PUT/DELETE with no rows
+          query params) will set up a view on row level (show only expected columns)
+        in: query
+        name: columns
+        type: string
+      - description: sets up a sql order in query (don't even try to inject you little
+          joker)
+        in: query
+        name: orderby
+        type: string
+      - description: sets up a sql direction in query (ex.ASC|DESC) (don't even try
+          to inject you little joker)
+        in: query
+        name: dir
+        type: string
+      - description: (Optionnal) Value of limit
+        in: query
+        name: limit
+        type: string
+      - description: (Optionnal) Value of offset
+        in: query
+        name: offset
+        type: string
+      - description: activate a lightest response (name only)
+        in: query
+        name: shallow
+        type: string
+      - description: set 'enable' to activate a response without the main response
+          format
+        in: query
+        name: rawview
+        type: string
+      - description: (Optionnal) Value of super
+        in: query
+        name: super
+        type: string
+      - description: 'Authorization Token HEADER '
+        in: header
+        name: Authorization
+        type: string
+      responses:
+        "200":
+          description: '{string} success !'
+        "403":
+          description: no table
+      tags:
+      - generic
   /main:
     get:
       description: |-
